dxr/tests/trybuild/enum.stderr
error: Deriving FromDXR for enums and unions is not supported.
 --> tests/trybuild/enum.rs:4:10
  |
4 | pub enum Enum {
  |          ^^^^
