dxr/tests/trybuild/enum.rs
use dxr::TryFromValue;

#[derive(TryFromValue)]
pub enum Enum {
    Variant,
}

fn main() {}
